--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
